[package]
name = "boh"
description = "A holder of many things"
repository = "https://github.com/EmbarkStudios/boh"
version = "0.0.1"
authors = [
  "Embark <opensource@embark-studios.com>",
  "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/boh"
homepage = "https://github.com/EmbarkStudios/boh"
categories = ["development-tools::build-utils"]
keywords = ["wasm"]
exclude = ["examples/", ".github/", "tests"]
rust-version = "1.66.0"

[dependencies]
# Friendly error handling
anyhow = "1.0"
async-scoped = { version = "0.7", features = ["use-tokio"] }
base64 = "0.21"
# Buffer helpers
bytes = "1.0"
camino = "1.1"
# Argument parsing
clap = { version = "4.0", features = ["derive", "env"] }
# For futures helpers
futures-util = { version = "0.3", default-features = false }
http = "0.2"
memmap2 = "0.5"
# Colors!
nu-ansi-term = "0.46"
# Human friendly byte sizes
number_prefix = "0.4"
rayon = "1.5"
# For HTTP requests
reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
  "stream",
] }
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
# JSON serialization
serde_json = "1.0"
symbolic-common = { version = "10.0", features = ["serde"] }
symbolic-debuginfo = { version = "10.0", default-features = false, features = [
    "breakpad",
    "dwarf",
    "elf",
    "macho",
    "ms",
    "ppdb",
    "sourcebundle",
    "wasm",
] }
# GCS requests
tame-gcs = { version = "0.12", features = ["signing"] }
# Authentication
tame-oauth = { version = "0.8", features = ["gcp"] }
# Timestamp formatting
time = { version = "0.3", features = ["formatting", "macros"] }
# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
# Url parsing
url = "2.2"
walkdir = "2.3"
#wasmtime = "4.0"
zstd = "0.12"
